# cudnnRNNForwardtest

./: CMakeLists.txt  CUDA_PROVIDER_SETUP.md  FIXES_SUMMARY.md  GRU_FIX_REPORT.md  INITIAL_H_FIX_VERIFICATION.md  README.md  README_CN.md  RNN_PRECISION_FIX_REPORT.md  TEST5_BIDIRECTIONAL_FIX_REPORT.md  build.sh  debug_bidirectional_format.py  quick_rnn_test.cpp  quick_test.py  rnn_performance_test.cpp  test_fix_verification  test_fix_verification.cpp  test_initial_h_fix.py  test_lstm_fix.py  test_weight_fix  test_weight_fix.cpp  verify.py
